--- a/CiotEFrete/CiotEFrete.csproj
+++ b/CiotEFrete/CiotEFrete.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Gerene Sistemas de Informação</Authors>
+    <Description>https://github.com/marcosgerene/CiotEFrete</Description>
+    <Copyright></Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/marcosgerene/CiotEFrete</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
