[-] Corrigindo estadociot no método PefObterCodigoIdentificacaoOperacaoTransportePorIdOperacaoClienteResult

--- a/CiotEFrete/CiotEFrete.csproj
+++ b/CiotEFrete/CiotEFrete.csproj
@@ -8,6 +8,7 @@
     <Copyright></Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/marcosgerene/CiotEFrete</PackageProjectUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
